# hive

./: .dockerignore  .env.example  .env.global.example  .env.shared.example  .git-commit-template-qa  .git-config-qa-agent  .gitignore  .pre-commit-config.fast.yaml  .pre-commit-config.yaml  .tmux.conf  AI_AGENT_GUIDE.md  AI_AGENT_START_HERE.md  ARCHITECTURE.md  AUTOMATED_GUARDIAN_COMPLETE.md  CC_MAS_ARCHITECTURE_PLAN.md  COMMIT_READY_SUMMARY.md  COMPREHENSIVE_CLEANUP_ANALYSIS.md  COMPREHENSIVE_REPOSITORY_CLEANUP_COMPLETE.md  CONTEXT_SYSTEM.md  Cargo.toml  DOCUMENTATION_ANALYSIS_REPORT.md  Dockerfile.dev  Dockerfile.multiservice  ENHANCED_GOLDEN_RULES_REPORT.md  ENVIRONMENT_SETUP.md  FLEET_COMMAND_V4.md  FOUNDATION_FORTIFICATION_COMPLETE.md  GOLDEN_RULES_EVOLUTION_COMPLETE.md  GOLDEN_TEST_FIXES.md  HEADLESS_MAS_README.md  HIVE_CLI_GUIDE.md  HIVE_V3_MISSION.md  INTEGRATION_TESTING_COMPLETION_REPORT.md  Makefile  PLATINUM_BURNDOWN_PLAN.md  PRODUCTION_SHIELD_COMPLETE.md  PRODUCTION_SHIELD_VERIFICATION_COMPLETE.md  README.md  README_COMPLETE.md  SEQUENTIAL_THINKING_MCP_ANALYSIS.md  (+130 more)
apps/ai-deployer/: README.md  hive-app.toml  pyproject.toml
apps/ai-deployer/tests/: test_agent.py  test_integration.py  test_strategies.py
apps/ai-planner/: README.md  demo_claude_planner.py  demo_claude_planner.py.backup  hive-app.toml  pyproject.toml  run_agent.py
apps/ai-planner/tests/: test_claude_integration.py  test_claude_integration_backup.py  test_simple_integration.py
apps/ai-reviewer/: README.md  hive-app.toml  pyproject.toml  run_agent.py  run_agent.py.backup  start_reviewer.sh
apps/ai-reviewer/tests/: test_agent.py  test_e2e_review.py  test_integration.py  test_reviewer.py
apps/chimera-daemon/: QUICKSTART.md  README.md  pyproject.toml  requirements.txt
apps/chimera-daemon/docs/: TESTING_PATTERNS.md
apps/chimera-daemon/scripts/: validate_autonomous_execution.py
apps/chimera-daemon/tests/: __init__.py  conftest.py
apps/e2e-tester-agent/: README.md  demo_simple.py  pyproject.toml
apps/e2e-tester-agent/templates/: test_template.py.jinja2
apps/ecosystemiser/: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_2_HANDOFF.md  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  ENHANCED_ARCHITECTURE_COMPLETE.md  FEEDBACK.md  FUNCTIONAL_STATUS.md  PROJECT_STATUS.md  README.md  STRATEGY_PATTERN_STATUS.md  debug_milp.py  debug_milp_extraction.py  debug_objective.py  debug_timestep.py  docker-compose.yml  final_debug.py  fix_all_syntax.py  fix_syntax_critical.py  fix_unicode.py  generate_golden_dataset.py  generate_golden_simplified.py  hive-app.toml  hive_adapter.py  hybrid_8760h_results.txt  minimal_plot_factory.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  run_tests.py  setup.py  syntax_test.py  validate_enhanced_architecture.py  validate_systemiser_equivalence.py  verify_fixes.py
apps/ecosystemiser/benchmarks/: baseline_v3.0_20250928_151814.json  baseline_v3.0_20250928_153550.json  baseline_v3.0_20250929_012236.json
apps/ecosystemiser/claudedocs/: ORCHESTRATION_LAYER_ARCHITECTURE.md
apps/ecosystemiser/dashboard/: README.md  RESULTS_EXPLORER.md  app.py  app_isolated.py  requirements.txt  results_explorer.py
apps/ecosystemiser/docs/: ARCHITECTURE.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_HIERARCHY.md  ARCHITECTURE_REFACTORING_SUMMARY.md  MIGRATION_GUIDE_v2.md  REFACTORING_PHASE2_PLAN.md  ROADMAP.md  XARRAY_AUDIT.md
apps/ecosystemiser/examples/: README.md  parametric_sweep_example.py  run_full_demo.py
apps/ecosystemiser/scripts/: batch_update_remaining.py  complete_final_three.py  complete_strategy_pattern.py  create_thermal_profiles.py  debug_service.py  demo_advanced_capabilities.py  extract_golden_profiles.py  extract_yearly_profiles.py  fix_all_remaining_errors.py  fix_field_commas_ast.py  fix_imports.py  fix_imports_src.py  fix_missing_optional_imports.py  fix_optional_imports_safe.py  fix_relative_imports.py  fix_remaining_syntax.py  fix_syntax_errors_manual.py  foundation_benchmark.py  integrate_climate_data.py  migrate_logging.py  monitor_database_connections.py  run_benchmarks.py  run_cli_suite.py  run_codebase_restoration.py  simple_test.py  update_remaining_components.py  validate_core_architecture.py  validate_database_fixes.py  validate_database_logging.py  (+7 more)
apps/event-dashboard/: README.md  __init__.py  __init__.py.backup  dashboard.py  dashboard.py.backup  hive-app.toml  pyproject.toml  start_dashboard.py
apps/guardian-agent/: Dockerfile  GENESIS_AGENT_COMPLETE.md  GENESIS_MANDATE_PHASE1_COMPLETE.md  GENESIS_MANDATE_PHASE2_COMPLETE.md  HIVE_INTELLIGENCE_IMPLEMENTATION.md  OPERATION_BEDROCK_COMPLETE.md  OPERATION_CITADEL_COMPLETE.md  OPERATION_MARKET_FOCUS_COMPLETE.md  OPERATION_UNIFICATION_COMPLETE.md  ORACLE_SELF_IMPROVEMENT_COMPLETE.md  README.md  ascii_architectural_demo.py  ascii_genesis_demo.py  ascii_genesis_phase1_demo.py  ascii_genesis_phase2_demo.py  ascii_market_focus_demo.py  ascii_operation_bedrock.py  ascii_operation_citadel.py  ascii_operation_unification_demo.py  ascii_oracle_demo.py  demo_architectural_oracle.py  demo_genesis_agent.py  demo_genesis_phase1.py  demo_market_focus.py  demo_operation_bedrock.py  demo_operation_citadel.py  demo_oracle.py  demo_rag_comments.py  demo_write_mode.py  hive-app.toml  pyproject.toml  run_oracle_demo.py  simple_architectural_demo.py  simple_oracle_demo.py
apps/hive-agent-runtime/: pyproject.toml
apps/hive-archivist/: README.md  pyproject.toml
apps/hive-coder/: README.md  demo_colossus.py  pyproject.toml
apps/hive-orchestrator/: README.md  hive-app.toml  hive_config.json  pyproject.toml  pyproject.toml.tmp  run_queen.bat  run_queen.py  run_queen.py.backup  run_tests.py  test-requirements.txt
apps/notification-service/: Dockerfile  README.md  hive-app.toml  pyproject.toml
apps/qr-service/: README.md  hive-app.toml  main.py  pyproject.toml  requirements.txt
apps/test-weather-service/: Dockerfile  README.md  app.py  gunicorn_config.py  pyproject.toml
templates/flask-api/: .deployignore  .env.example  README.md  app.py  gunicorn_config.py  pyproject.toml
(+2039 files in other folders)
