[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-planner"
version = "1.0.0"
description = "Intelligent task planning and workflow generation agent for Hive system"
authors = [ "Hive Team",]
[[tool.poetry.packages]]
include = "ai_planner"
from = "src"

[tool.black]
line-length = 120
target-version = [ "py38", "py39", "py310", "py311",]
include = "\\.pyi?$"
extend-exclude = "/(\n  # directories\n  \\.eggs\n  | \\.git\n  | \\.hg\n  | \\.mypy_cache\n  | \\.tox\n  | \\.venv\n  | build\n  | dist\n  | archive\n)/\n"

[tool.ruff]
line-length = 120
select = [ "E", "W", "F", "I", "B", "C4", "UP",]
ignore = [ "E501", "B008", "C901",]
target-version = "py38"
exclude = [ ".git", "__pycache__", "dist", "build", ".venv", "archive",]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = [ "archive/", "legacy/", "tests/",]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
addopts = "--cov=ai_planner --cov-report=html --cov-fail-under=80"

[tool.ruff.lint]
select = [ "E4", "E7", "E9", "F", "I",]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.dependencies.hive-orchestrator]
path = "../hive-orchestrator"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^24.8.0"
mypy = "^1.8.0"
ruff = "^0.1.15"
