[build-system]
requires = [ "poetry-core",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ai-planner"
version = "1.0.0"
description = "Intelligent task planning and workflow generation agent for Hive system"
authors = [ "Hive Team",]
[[tool.poetry.packages]]
include = "ai_planner"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.0"

[tool.pytest.ini_options]
testpaths = [ "tests",]
pythonpath = [ "src",]
addopts = "--cov=ai_planner --cov-report=html --cov-fail-under=80"

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.dependencies.hive-orchestrator]
path = "../hive-orchestrator"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
black = "^24.8.0"
mypy = "^1.8.0"
ruff = "^0.13.2"
