[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hive-ai-reviewer"
version = "0.1.0"
description = "Autonomous AI code review agent for Hive App Factory"
authors = [ "Hive Team",]
[[tool.poetry.packages]]
include = "ai_reviewer"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.39.0"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.scripts]
ai-reviewer = "ai_reviewer.agent:main"
ai-reviewer-daemon = "ai_reviewer.agent:run_daemon"

[tool.pytest.ini_options]
addopts = "-v --cov=ai_reviewer --cov-report=html --cov-report=term"
testpaths = [ "tests",]

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.8.0"
mypy = "^1.8.0"
ruff = "^0.1.15"
