[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hive-ai-reviewer"
version = "0.1.0"
description = "Autonomous AI code review agent for Hive App Factory"
authors = [ "Hive Team",]
[[tool.poetry.packages]]
include = "ai_reviewer"
from = "src"

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.39.0"
pydantic = "^2.5.0"
rich = "^13.7.0"

[tool.poetry.scripts]
ai-reviewer = "ai_reviewer.agent:main"
ai-reviewer-daemon = "ai_reviewer.agent:run_daemon"

[tool.pytest.ini_options]
addopts = "-v --cov=ai_reviewer --cov-report=html --cov-report=term"
testpaths = [ "tests",]

[tool.poetry.dependencies.hive-config]
path = "../../packages/hive-config"
develop = true

[tool.poetry.dependencies.hive-db]
path = "../../packages/hive-db"
develop = true

[tool.poetry.dependencies.hive-logging]
path = "../../packages/hive-logging"
develop = true

[tool.poetry.dependencies.hive-errors]
path = "../../packages/hive-errors"
develop = true

[tool.poetry.dependencies.hive-bus]
path = "../../packages/hive-bus"
develop = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^24.8.0"
mypy = "^1.8.0"
ruff = "^0.13.2"

# ========================================
# Ruff Configuration (Linter & Formatter)
# ========================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "archive",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "B008", "C901", "COM812", "COM818", "COM819"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "hive_logging", "hive_config", "hive_db", "hive_cache", "hive_errors",
    "hive_bus", "hive_async", "hive_performance", "hive_ai", "hive_deployment",
    "hive_service_discovery", "hive_tests", "hive_models", "hive_algorithms",
    "hive_cli", "hive_app_toolkit", "hive_orchestration", "hive_graph",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S602", "S604"]
"scripts/**" = ["S602", "S604"]
"archive/**" = ["S"]
