[tool.poetry]
name = "chimera-daemon"
version = "0.1.0"
description = "Autonomous Chimera workflow execution daemon - Layer 2 autonomous execution"
authors = ["Hive Platform Team"]
readme = "README.md"
packages = [{include = "chimera_daemon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-config = {path = "../../packages/hive-config", develop = true}
hive-orchestration = {path = "../../packages/hive-orchestration", develop = true}
hive-db = {path = "../../packages/hive-db", develop = true}
aiosqlite = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.25.0"
ruff = "^0.1.15"
mypy = "^1.8.0"

[tool.poetry.scripts]
chimera-daemon = "chimera_daemon.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
