[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "e2e-tester-agent"
version = "0.1.0"
description = "E2E test generation and execution agent using AI and browser automation"
authors = ["Hive System <hive@example.com>"]
packages = [{include = "e2e_tester", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-errors = {path = "../../packages/hive-errors", develop = true}
hive-browser = {path = "../../packages/hive-browser", develop = true}
hive-orchestration = {path = "../../packages/hive-orchestration", develop = true}
jinja2 = "^3.1.0"
pydantic = "^2.0.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.21.0"
mypy = "^1.8.0"
ruff = "^0.1.15"

[tool.poetry.scripts]
e2e-tester = "e2e_tester.cli:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "S"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow asserts in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
