[tool.poetry]
name = "ecosystemiser"
version = "3.0.0"
description = "Energy ecosystem optimization and simulation platform"
authors = ["Hive Platform Team <hive@example.com>"]
packages = [{include = "ecosystemiser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# External dependencies
fastapi = "^0.110.0"
uvicorn = "^0.23.0"
pandas = "^2.0.0"
xarray = "^2023.1.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
pydantic-settings = "*"
httpx = "^0.25.0"
aiohttp = "^3.8.0"
click = "^8.1.0"
scipy = "^1.11.0"
python-dateutil = "^2.8.0"
pytz = "*"
timezonefinder = "^6.2.0"
structlog = "*"
tenacity = "^8.0.0"
diskcache = "*"
meteostat = "*"
cdsapi = "*"
pvlib = "*"
# Optimization dependencies (from setup.py consolidation)
cvxpy = "^1.2.0"
requests = "^2.26.0"

# Hive workspace dependencies
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-config = {path = "../../packages/hive-config", develop = true}
hive-errors = {path = "../../packages/hive-errors", develop = true}
hive-bus = {path = "../../packages/hive-bus", develop = true}
hive-db = {path = "../../packages/hive-db", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "*"
pytest-timeout = "*"
mypy = "^1.8.0"
black = "^24.8.0"
isort = "^5.13.0"
ruff = "^0.1.15"

[tool.poetry.scripts]
ecosys = "ecosystemiser.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
