[tool.poetry]
name = "ecosystemiser"
version = "3.0.0"
description = "Energy ecosystem optimization and simulation platform"
authors = ["Hive Platform Team <hive@example.com>"]
packages = [{include = "ecosystemiser", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# External dependencies
fastapi = "^0.110.0"
uvicorn = "^0.23.0"
pandas = "^2.0.0"
xarray = "^2023.1.0"
numpy = "^1.24.0"
pydantic = "^2.0.0"
pydantic-settings = "*"
httpx = "^0.25.0"
aiohttp = "^3.8.0"
click = "^8.1.0"
scipy = "^1.11.0"
python-dateutil = "^2.8.0"
pytz = "*"
timezonefinder = "^6.2.0"
structlog = "*"
tenacity = "^8.0.0"
diskcache = "*"
meteostat = "*"
cdsapi = "*"
pvlib = "*"
# Optimization dependencies (from setup.py consolidation)
cvxpy = "^1.2.0"
requests = "^2.26.0"

# Hive workspace dependencies
hive-logging = {path = "../../packages/hive-logging", develop = true}
hive-config = {path = "../../packages/hive-config", develop = true}
hive-errors = {path = "../../packages/hive-errors", develop = true}
hive-bus = {path = "../../packages/hive-bus", develop = true}
hive-db = {path = "../../packages/hive-db", develop = true}
hive-cli = {path = "../../packages/hive-cli", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "*"
pytest-timeout = "*"
mypy = "^1.8.0"
black = "^24.8.0"
isort = "^5.13.0"
ruff = "^0.13.2"

# ========================================
# Ruff Configuration (Linter & Formatter)
# ========================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "archive",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "B008", "C901", "COM812", "COM818", "COM819"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "hive_logging", "hive_config", "hive_db", "hive_cache", "hive_errors",
    "hive_bus", "hive_async", "hive_performance", "hive_ai", "hive_deployment",
    "hive_service_discovery", "hive_tests", "hive_models", "hive_algorithms",
    "hive_cli", "hive_app_toolkit", "hive_orchestration", "hive_graph",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S602", "S604"]
"scripts/**" = ["S602", "S604"]
"archive/**" = ["S"]

[tool.poetry.scripts]
ecosys = "ecosystemiser.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
pythonpath = ["src"]
