[project]
name = "event-dashboard"
version = "0.1.0"
description = "Real-time event dashboard for Hive V4.0 Event-Driven Architecture"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7.0",
]

[tool.setuptools]
py-modules = ["dashboard", "start_dashboard"]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.0",
    "black>=24.8.0",
    "mypy>=1.8.0",
    "ruff>=0.13.2",
]

# ========================================
# Ruff Configuration (Linter & Formatter)
# ========================================
[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".venv",
    "archive",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "S"]
ignore = ["E501", "B008", "C901", "COM812", "COM818", "COM819"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = [
    "hive_logging", "hive_config", "hive_db", "hive_cache", "hive_errors",
    "hive_bus", "hive_async", "hive_performance", "hive_ai", "hive_deployment",
    "hive_service_discovery", "hive_tests", "hive_models", "hive_algorithms",
    "hive_cli", "hive_app_toolkit", "hive_orchestration", "hive_graph",
]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S602", "S604"]
"scripts/**" = ["S602", "S604"]
"archive/**" = ["S"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
